🐛 FIX: Popular merch title bug overlapping modal-cart

--- a/source/sass/blocks/popular-merch.scss
+++ b/source/sass/blocks/popular-merch.scss
@@ -171,13 +171,10 @@
   }
 
   .popular-merch__title {
-    position: relative;
     margin: 125px 50px 47px 170px;
 
     font-size: 53px;
     line-height: 1.08;
-
-    z-index: 2;
   }
 
   .popular-merch__feature {
